# sts_lightspeed

./: .gitignore  .gitmodules  AGENTS.md  BATTLE_OUTCOME_PLAN.md  CANONICAL_DECK_PLAN.md  CLAUDE.md  CMakeLists.txt  COMM_README.md  COORD.md  CORRECTNESS_ISSUES.md  EXPERIMENT_LOG.md  GRAPH_SEARCH_PLAN.md  LICENSE.md  MCTS_CARD_SELECT_PLAN.md  PERSISTENT_BC_PHASE2.md  PERSISTENT_BC_PLAN.md  PILE_AUDIT.md  PPO_COLLECTION_PLAN.md  README.md  REMAINING_DIVERGENCES.md  SEARCH_MODEL_INACCURACIES.md  algorithms.py  analyze_ascension_probe.py  analyze_boss_outcomes.py  analyze_boss_probe.py  analyze_card_choices.py  analyze_card_token_sensitivity.py  analyze_greedy_eval.py  analyze_lookahead.py  analyze_rep_probe.py  analyze_shaping_coeffs.py  analyze_shaping_coeffs2.py  analyze_value_probe.py  backfill_heart_asc.py  battle_value_sl.py  boss_difficulty.py  cleanup_checkpoints.py  collect_boss_states2.py  collect_states.py  comm.py  (+54 more)
apps/: main.cpp  small-test.cpp  test.cpp
bindings/: bindings-util.cpp  requirements.txt  slaythespire.cpp  slaythespire.h
lambda_results/: bvsl_results.jsonl
lightspeed/: __init__.py  algorithms.py  battle_buckets.py  battle_value_sl.py  boss_difficulty.py  collect_boss_states2.py  collect_states.py  eval_burn_route.py  eval_hero.py  gen_battle_outcomes.py  golden_asc_check.py  grind_era_tally.py  network.py  playouts.py  rest_smith_eval.py  rl_train.py  sl_map_probe.py  sl_repr_lab.py  test_graph_search.py  test_graph_simple.py  test_inputs.py  test_shaping.py  train.py  value_linear.py  value_sl.py  value_sl_followup.py  watch_game.py
runs/: redo2_seeds_a20h10k.txt  redo_seeds_a20h10k.txt
silverbot/: __init__.py  algorithms.py  battle_buckets.py  battle_value_sl.py  boss_difficulty.py  (+23 more)
(+116 files in other folders)
